--- a/index.html
+++ b/index.html
@@ -118,14 +118,38 @@
         <h2>Portfolio</h2>
         <nav>
             <ol class="clearfix">
-                <li>HTML5 &amp; CSS3 </li>
-                <li>原生JS </li>
-                <li>框架</li>
+                <li id="portfolio1">所有</li>
+                <li id="portfolio2">框架</li>
+                <li id="portfolio3">原生Js&amp;CSS</li>
             </ol>
+            
+            <div id="portfoliobar" class="bar state-1">
+                <div class="bar-inner"></div>
+            </div>
         </nav>
-        <div class="big"></div>
-        <div class="small"></div>
-        <div class="small"></div>
+        <script>
+                portfolio1.onclick =function(){
+                    portfoliobar.className = 'bar state-1'
+                }
+                portfolio2.onclick =function(){
+                    portfoliobar.className = 'bar state-2'
+                }
+                portfolio3.onclick =function(){
+                    portfoliobar.className = 'bar state-3'
+                }
+     
+        </script>
+    <div class="works">
+        <div class="big" style="top:0%;left:0%;">
+            <img src="./img/2.jpg" alt="first work">
+        </div>
+        <div class="small" style="top:0%; left:645px;">
+            <img src="./img/3.jpg" alt="second work">
+        </div>
+        <div class="small" style="top:298px; left:645px;">
+            <img src="./img/4.jpg" alt="third work">
+        </div>
+    </div>
     </section>
 </body>
 </html>
