--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
            overflow: hidden;
         }
     </style>
+    <link rel="stylesheet" href="./loading.css">
     <link rel="stylesheet" href="./x.css">
     <script src="//at.alicdn.com/t/font_604057_m4tx03q18pzrrudi.js"></script>
 </head>
 <body>
+    <div id="siteWelcome"class="site-welcome active">
+        <div class="loading"></div>
+    </div>
     <div class="TopNavBar ">
         <div class="inner clearfix">
         <a class="logo">
@@ -45,7 +49,7 @@
             
             <div class="selfieAndintro clearfix">
                 <div class="selfie">
-                    <img src="./img/avatar.jpg" alt="selfie">
+                    <img src="./img/avatar2.jpg" alt="selfie">
                 </div>
                 <div class="intro">
                     <span class="hello">Hello
@@ -151,5 +155,6 @@
         </div>
     </div>
     </section>
+    <script src="./main.js"></script>
 </body>
 </html>
