增加高亮导航栏元素效果；增加浏览元素上下滑效果

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="siteWelcome" class="site-welcome active">
         <div class="loading"></div>
     </div>
-    <div id="TopNavBar" class="TopNavBar">
+    <div id="TopNavBar" class="TopNavBar slideDown offset">
         <div id="inner" class="inner clearfix">
             <a class="logo">
                 <span class="rs">RS</span>
@@ -76,7 +76,7 @@
     <div class="banner">
         <div class="mask"></div>
     </div>
-    <main id="siteAbout">
+    <main id="siteAbout" class="slideUp offset" highLight>
         <div class="usercard">
 
             <div class="selfieAndintro clearfix">
@@ -131,27 +131,27 @@
 
     </main>
 
-    <section class="skill" id="siteSkills">
+    <section class="skill slideUp offset" id="siteSkills" highLight>
         <h2>Professional Skills</h2>
         <ol>
             <div class="skillcard clearfix">
                 <li>HTML5 &amp; CSS3
-                    <div class="meter">
+                    <div class="meter  offset">
                         <span style="width: 60%"></span>
                     </div>
                 </li>
                 <li>Javascript
-                    <div class="meter">
+                    <div class="meter  offset">
                         <span style="width: 40%"></span>
                     </div>
                 </li>
                 <li>jQuary
-                    <div class="meter">
+                    <div class="meter  offset">
                         <span style="width: 70%"></span>
                     </div>
                 </li>
                 <li>Vue
-                    <div class="meter">
+                    <div class="meter  offset">
                         <span style="width: 90%"></span>
                     </div>
                 </li>
@@ -159,7 +159,7 @@
         </ol>
 
     </section>
-    <section class="portfolio" id="sitePortfolio">
+    <section class="portfolio offset slideUp" id="sitePortfolio" highLight>
         <h2>Portfolio</h2>
         <nav>
             <ol class="clearfix">
