模块化并引入MVC

--- a/index.html
+++ b/index.html
@@ -6,15 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>resume</title>
-    <style type="text/css">
-        .icon {
-            width: 1em;
-            height: 1em;
-            vertical-align: -0.15em;
-            fill: currentColor;
-            overflow: hidden;
-        }
-    </style>
     <link rel="stylesheet" href="./loading.css">
     <link rel="stylesheet" href="./node_modules/swiper/dist/css/swiper.min.css">
     <link rel="stylesheet" href="./x.css">
@@ -23,9 +14,11 @@
 </head>
 
 <body>
-    <div id="siteWelcome" class="site-welcome active">
+    <!--加载动画-->
+    <!-- <div id="siteWelcome" class="site-welcome active">
         <div class="loading"></div>
-    </div>
+    </div> -->
+
     <div id="TopNavBar" class="TopNavBar slideDown offset">
         <div id="inner" class="inner clearfix">
             <a class="logo">
@@ -165,7 +158,8 @@
     </section>
     <section class="portfolio offset slideUp" id="sitePortfolio" highLight>
         <h2>Portfolio</h2>
-        <nav>
+        <!--作品展示框的上方提示栏-->
+        <!-- <nav>
             <ol class="clearfix">
                 <li id="portfolio1">所有</li>
                 <li id="portfolio2">框架</li>
@@ -186,10 +180,11 @@
                 portfoliobar.className = 'bar state-3'
             }
 
-        </script>
+        </script> -->
 
         <!--轮播-->
-        <div class="swiper-container">
+        <div id="swiper">
+            <div class="swiper-container">
                 <div class="swiper-wrapper">
                     <img src="./works/canvas.jpg" class="swiper-slide">
                     <img src="./works/nav-page.jpg" class="swiper-slide">
@@ -199,13 +194,20 @@
                 <div class="swiper-pagination"></div>
                 <!-- 如果需要滚动条 -->
                 <div class="swiper-scrollbar"></div>
+            </div>
+            <!-- 如果需要导航按钮 -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+
         </div>
-        <!-- 如果需要导航按钮 -->
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
+
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.2.0/Tween.min.js"></script>
-    <script src="./main.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/skip-insideThePage.js"></script>
+    <script src="./js/auto-slide-up.js"></script>
+    <script src="./js/sticky-topbar.js"></script>
+    <script src="./js/init-swiper.js"></script>
 </body>
 
 </html>
