--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./x.css">
     <script src="//at.alicdn.com/t/font_604057_m4tx03q18pzrrudi.js"></script>
     <script src="./node_modules/swiper/dist/js/swiper.min.js"></script>
-    <script src="./node_modules\leancloud-storage\dist/av-min.js"></script>
+    <script src="./node_modules/leancloud-storage/dist/av-min.js"></script>
 </head>
 
 <body>
