js文件请求出错，所以引入cdn

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="./node_modules/swiper/dist/css/swiper.min.css">
     <link rel="stylesheet" href="./x.css">
     <script src="//at.alicdn.com/t/font_604057_m4tx03q18pzrrudi.js"></script>
-    <script src="./node_modules/swiper/dist/js/swiper.min.js"></script>
-    <script src="./node_modules/leancloud-storage/dist/av-min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.2/js/swiper.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/leancloud-storage@3.11.1/dist/av-min.js"></script>
 </head>
 
 <body>
