--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,6 @@
                             <div class="row"><span>年龄:</span><span>20</span></div>
                             <div class="row"><span>地址:</span><span>北京</span></div>
                             <div class="row"><span>邮箱:</span><span>victyyh@foxmail</span></div>
-                            <div class="row"><span>手机:</span><span>13263218588</span></div>
                         </div>
                         <!-- <dl class="clearfix">
                             <dt>AGE</dt>
@@ -174,8 +173,8 @@
                             <h4>jQuery实现带管理页面的网易云音乐</h4>
                         <div>项目描述:</div>
                             <ol>
-                                <li>通过HTML+CSS+<em>jQuery</em>实现</li>
-                                <li>配合<em>flex布局、rem、vh/vw</em>做到适配移动端</li>
+                                <li>通过HTML+CSS+<em>jQuery</em>实现歌曲管理页面的歌曲上传，歌曲信息修改等功能</li>
+                                <li>配合<em>flex布局、rem、vh/vw</em>做到适配移动端，有歌词滚动等常见功能</li>
                                 <li>使用leanCloud存储用户数据，七牛云存储上传的文件</li>
                             </ol>
                         <div>项目预览：<a href="https://yyhsz.github.io/music163-demo/src/home.html" target="_blank">点此查看</a></div>
@@ -212,6 +211,8 @@
                                     <li>使用<em>MVC模式</em>组织代码</li>
                                     <li>使用<em>Tween.js</em>实现缓动效果</li>
                                 </ol>
+                            <div>源码链接：<a href="https://github.com/yyhsz/resume" target="_blank">点此查看</a></div>
+
                         </div>
                         <img src="" alt="">
                     </div>
@@ -239,7 +240,7 @@
         
     </section>
     <section class="message" id='message'>
-        <h2>留言</h2>
+        <h2>留言板</h2>
         <ol id="messageList">
         </ol>
         <form action="" id="postMessage">
