--- a/src/index.html
+++ b/src/index.html
@@ -57,15 +57,16 @@
                     <span class="hello">Hello
                         <span class="triangle"></span>
                     </span>
-                    <h1 style="margin-top:20px;margin-bottom:16px;color: rgb(60, 67, 79);">I'm YYH</h1>
+                    <h1 style="margin-top:20px;margin-bottom:16px;color: rgb(60, 67, 79);">余银海</h1>
                     <p style="color: rgb(60, 67, 79);">应聘前端实习生</span>
                     <hr>
                     
                     <div class="information">
                         <div>
                             <div class="row"><span>年龄:</span><span>20</span></div>
-                            <div class="row"><span>地址:</span><span>北京</span></div>
+                            <div class="row"><span>实习地点:</span><span>北京、深圳</span></div>
                             <div class="row"><span>邮箱:</span><span>victyyh@foxmail</span></div>
+                            <div class="row"><span>微信（QQ）:</span><span>591985864</span></div>
                         </div>
                         <!-- <dl class="clearfix">
                             <dt>AGE</dt>
@@ -78,7 +79,6 @@
                             <dd>234523453</dd>
                         </dl> -->
                         <div>
-                                <div class="row"><span>微信（QQ）:</span><span>591985864</span></div>
                                 <div class="row"><span>在读院校:</span><span>北京科技大学</span></div>
                                 <div class="row"><span>专业:</span><span>通信工程</span></div>
                                 <div class="row"><span>英语等级:</span><span>CET-4</span></div>
@@ -178,7 +178,7 @@
                                 <li>使用leanCloud存储用户数据，七牛云存储上传的文件</li>
                             </ol>
                         <div>项目预览：<a href="https://yyhsz.github.io/music163-demo/src/home.html" target="_blank">点此查看</a></div>
-                        <div>源码链接：<a href="https://github.com/yyhsz/music163-demo" target="_blank">点此查看</a></div>
+                        <div>项目源码：<a href="https://github.com/yyhsz/music163-demo" target="_blank">点此查看</a></div>
                         <div>预览二维码：<img src="https://i.loli.net/2019/03/15/5c8ba20800d2e.png" alt=""></div>
 
                         </div><img src="https://i.loli.net/2019/03/15/5c8b9e03bf0f2.jpg" alt="">
@@ -186,6 +186,9 @@
                     <div class="works swiper-slide">
                         <img src="https://i.loli.net/2019/03/15/5c8b9e8d7a2c1.jpg" alt="">
                         <img src="https://i.loli.net/2019/03/15/5c8b9e9880cd2.jpg" alt="">                        
+                    </div>
+                    <div class="works swiper-slide">
+                        <img src="https://i.loli.net/2019/03/16/5c8c76e3767b0.jpg" style="width:720px" alt="">                     
                     </div>
                     <div class="works swiper-slide">
                         <div>
@@ -197,13 +200,13 @@
                                     <li>使用<em>Prism.js</em>实现代码高亮</li>
                                 </ol>
                             <div>项目预览：<a href="https://yyhsz.github.io/draw-A-Doraemon/index.html" target="_blank">点此查看</a></div>
-                            <div>源码链接：<a href="https://github.com/yyhsz/draw-A-Doraemon" target="_blank">点此查看</a></div>
+                            <div>项目源码：<a href="https://github.com/yyhsz/draw-A-Doraemon" target="_blank">点此查看</a></div>
                             <div>预览二维码：<img src="https://i.loli.net/2019/03/15/5c8ba19ee345f.png" alt=""></div>
 
                         </div><img src="https://i.loli.net/2019/03/15/5c8ba0ddb4c08.jpg" alt="">
                     </div>
                     <div class="works swiper-slide">
-                        <div>
+                        <div style="width:718px">
                             <h4>在线简历</h4>
                             <div>项目描述:</div>
                                <ol>
@@ -211,7 +214,7 @@
                                     <li>使用<em>MVC模式</em>组织代码</li>
                                     <li>使用<em>Tween.js</em>实现缓动效果</li>
                                 </ol>
-                            <div>源码链接：<a href="https://github.com/yyhsz/resume" target="_blank">点此查看</a></div>
+                            <div>项目源码：<a href="https://github.com/yyhsz/resume" target="_blank">点此查看</a></div>
 
                         </div>
                         <img src="" alt="">
@@ -224,7 +227,7 @@
                                             <li>使用<em>原生JS+Node.js</em>模拟用户注册与登陆</li>
                                             <li>运用<em>session</em>、<em>cookie</em>与<em>localStorage</em>操控相关数据</li>
                                         </ol>
-                                <div>源码链接：<a href="https://github.com/yyhsz/sign_in_demo" target="_blank">点此查看</a></div>
+                                <div>项目源码：<a href="https://github.com/yyhsz/sign_in_demo" target="_blank">点此查看</a></div>
                         </div><img src="https://i.loli.net/2019/03/15/5c8ba7b2f0cf7.jpg" style="width:48%" alt="">
                     </div>
 
