--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
         <div class="usercard">
             <div class="selfieAndintro clearfix">
                 <div class="selfie">
-                    <img src="./img/avatar2.jpg" alt="selfie">
+                    <img src="https://i.loli.net/2019/03/19/5c908af7336a3.png" alt="selfie">
                 </div>
                 <div class="intro">
                     <span class="hello">Hello
@@ -117,7 +117,7 @@
                         <span style="width: 60%"></span>
                     </div>
                 </li>
-                <li>jQuery、Bootstrap等前端常用库
+                <li>jQuery、移动端开发
                     <div class="meter  offset">
                         <span style="width: 40%"></span>
                     </div>
@@ -217,7 +217,7 @@
                             <div>项目源码：<a href="https://github.com/yyhsz/resume" target="_blank">点此查看</a></div>
 
                         </div>
-                        <img src="" alt="">
+                        <img src="https://i.loli.net/2019/03/19/5c908c95c8c4c.jpg" style='width:360px'alt="">
                     </div>
                     <div class="works swiper-slide">
                         <div>
