--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@
             </footer>
         </div>
         <div class="download">
-            <a href="http://ponyqmpfc.bkt.clouddn.com/%E5%BA%94%E8%81%98%E5%89%8D%E7%AB%AF%E5%AE%9E%E4%B9%A0%E7%94%9F-%E4%BD%99%E9%93%B6%E6%B5%B7-%E5%8C%97%E4%BA%AC%E7%A7%91%E6%8A%80%E5%A4%A7%E5%AD%A6.pdf" target="_blank" download='应聘前端实习生-余银海-北京科技大学'>下载PDF版简历</a>
+            <a href="./应聘前端实习生-余银海-北京科技大学.pdf" target="_blank" download='应聘前端实习生-余银海-北京科技大学'>下载PDF版简历</a>
         </div>
     </main>
     <section class="skill slideUp offset" id="siteSkills" highLight>
