--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
             </footer>
         </div>
         <div class="download">
-            <a href="./应聘前端实习-余银海-北京科技大学.pdf" target="_blank" download='应聘前端实习生-余银海-北京科技大学'>下载PDF版简历</a>
+            <a href="./前端工程师-余银海-北京科技大学.pdf" target="_blank" download='前端工程师-余银海-北京科技大学'>下载PDF版简历</a>
         </div>
     </main>
     <section class="skill slideUp offset" id="siteSkills" highLight>
